@@ -88,6 +88,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - macbuild.sh: add some more debugging output.
     - macbuild.sh: remove libpulse and libpulsecore from libraries to be
       bundled, as something else will bundle them anyway.
+    - macbuild.sh: use while-read-loop and find to actually recurse through
+      directories.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
